--- a/basic/basic-layout-2.html
+++ b/basic/basic-layout-2.html
@@ -6,7 +6,12 @@
     <title>Basic Layout 2</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+     body {
+        display: grid;
+        grid-template-rows: 3fr 1fr 8fr 2fr;
+        gap: 10px; /* Optioneel: ruimte tussen de grid items */
+      }
+
     </style>
   </head>
   <body id="basic-layout-2">
