--- a/basic/basic-layout-1.html
+++ b/basic/basic-layout-1.html
@@ -6,10 +6,36 @@
     <title>Basic Layout 1</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      body {
+     body {
+        margin: 0;
+        padding: 0;
         display: grid;
+        grid-template-columns: 1fr 2fr; /* Twee kolommen: sidebar en main content */
+        grid-template-rows: auto 1fr auto; /* Drie rijen: header, content, footer */
+        height: 100vh; /* Zorg dat het de volledige schermhoogte gebruikt */
+        gap: 10px; /* ruimte tussen de grid items */
       }
-      /* Doe hier jouw ding! */
+
+      header {
+        grid-column: 1 / 3; /* Header strekt zich uit over beide kolommen */
+        padding: 40px;
+        text-align: center;
+      }
+     
+      nav {
+        padding: 20px;
+      }
+    
+      main {
+        padding: 20px;
+      }
+
+      footer {
+        grid-column: 1 / 3; /* Footer strekt zich uit over beide kolommen */
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
     </style>
   </head>
   <body id="basic-layout-1">
