--- a/basic/basic-layout-7.html
+++ b/basic/basic-layout-7.html
@@ -8,12 +8,20 @@
     <style>
       main {
         padding: 1em;
+        min-height: 55em;
       }
       nav {
         min-height: 5em;
-      }
+        float: right;
+        margin: 15px;
+        width: 150px;
+        height: 300px;
+        }
+
       p {
         margin: 0;
+        font-size: 2em;
+        
       }
       
       /* Doe hier jouw ding! */
