--- a/basic/basic-layout-8.html
+++ b/basic/basic-layout-8.html
@@ -6,7 +6,12 @@
     <title>Basic Layout 8</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-      /* Doe hier jouw ding! */
+  main {
+    height: 900px;
+    width: 450px;
+    font-size: 27px;
+    
+  }
     </style>
   </head>
   <body id="basic-layout-8">
