--- a/basic/basic-layout-6.html
+++ b/basic/basic-layout-6.html
@@ -6,15 +6,23 @@
     <title>Basic Layout 6</title>
     <link rel="stylesheet" href="../style.css">
     <style>
-     body {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 10px;
+  body {
+     display: grid;
+     grid-template-rows: 20% 1fr;
+     grid-template-columns: 1fr 2fr 1fr;
+    gap: 20px;
       }
 
-      nav, main, footer {
-        grid-column: span 3;
-      }
+     header { 
+      order: -4;
+      grid-column: 1 / 3;
+     }
+
+
+     footer {
+     order: -3;
+     grid-row: span 2;
+     }
     </style>
   </head>
   <body id="basic-layout-6">
